--- a/index.html
+++ b/index.html
@@ -14,9 +14,21 @@
 <body>
   <section class="slider">
     <div class="container">
-      <div class="Next"></div>
+      <span class="Next">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+          <g fill='#FFFFFF'>
+            <path d="M12 4c-.8.8-.8 2.1 0 2.8l3.2 3.2H4c-1.1 0-2 .9-2 2s.9 2 2 2h11.2L12 17.2c-.8.8-.8 2.1 0 2.8.8.8 2 .8 2.8 0l6.6-6.6c.4-.4.6-.9.6-1.4 0-.5-.2-1-.6-1.4L14.8 4c-.7-.8-2-.8-2.8 0z"></path>
+          </g>
+        </svg>
+      </span>
       <img src="imgs/img5.jpg" alt="" />
-      <div class="Prev"></div>
+      <span class="Prev">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+          <g fill='#FFFFFF'>
+            <path d="M12 20c.8-.8.8-2.1 0-2.8L8.9 14H20c1.1 0 2-.9 2-2s-.9-2-2-2H8.9L12 6.8c.8-.8.8-2.1 0-2.8-.8-.8-2-.8-2.8 0l-6.6 6.6c-.4.4-.6.9-.6 1.4 0 .5.2 1 .6 1.4L9.2 20c.7.8 2 .8 2.8 0z"></path>
+          </g>
+        </svg>
+      </span>
     </div>
   </section>
   <!-- Project -->
